react-app/src/components/Mobile/Mobile.css
.mobileView{
    background-color: transparent;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    /* max-width: fit-content; */
    height: 100%;
    /* min-height: 100%; */
    z-index: -2;
    position: fixed;
    flex-direction: column;
    font-size: 4vh;
    word-wrap: break-word;
    /* padding:10%; */
    /* overflow:hidden; */
    /* padding: 0; */
    /* margin: 0; */
    /* transform-origin: 0 0; */
    
    

}
@media screen and (max-width:1279px) {
    .mobileView{
        background-color: blue;
        z-index: 8;
    }
}
.mobile-text{
    padding:3rem;
}

